samples/_failures_safe/1761621479_d7e714_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3389bf02.c: In function ‘main’:
./samples/SAFE/__tmp_3389bf02.c:142:36: error: missing terminating ' character
  142 |             search_term[len - 1] = '\
      |                                    ^~
./samples/SAFE/__tmp_3389bf02.c:142:13: error: expected expression at end of input
  142 |             search_term[len - 1] = '\
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_3389bf02.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3389bf02.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3389bf02.c:142:13: error: expected declaration or statement at end of input
